[tool.poetry]
name = "arcaflow-plugin-kubeconfig"
version = "0.2.0"
description = ""
authors = ["Arcalot Contributors"]
license = "Apache-2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.10.1"
kubernetes = "^24.2.0"
pyyaml = ">=5.4,<6.0"
certifi = "^2023.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
